# Depth-Dealer

./: Cargo.toml  README.md
Barter/integration/: Cargo.toml
Barter/integration/examples/: websocket_integration.rs
Barter/integration/src/: error.rs  lib.rs  main.rs  structure.txt
Barter/integration/src/model/: mod.rs
Barter/integration/src/model/instrument/: kind.rs  mod.rs  symbol.rs
Barter/integration/src/protocol/: mod.rs  websocket.rs
DepthDealer/: Cargo.toml
DepthDealer/src/: main.rs
DepthDealer/src/cli/: hummingbot_application.rs  mod.rs
DepthDealer/src/core/: clock.rs  clock_mode.rs  mod.rs
DepthDealer/src/logger/: logger.rs
executor/: Cargo.toml
executor/src/: main.rs
integration/: Cargo.toml
integration/examples/: main.rs
integration/src/: lib.rs
integration/src/model/: mod.rs
integration/src/model/instrument/: kind.rs  mod.rs  symbol.rs
integration/src/protocol/: mod.rs
src/: main.rs
src/data/: event.rs  lib.rs
src/data/exchange/: mod.rs
src/data/streams/: mod.rs
src/data/streams/builder/: mod.rs
src/data/subscription/: mod.rs
src/integration/: error.rs  mod.rs
src/integration/model/: mod.rs
src/integration/model/instrument/: mod.rs
src/integration/protocol/: mod.rs  websocket.rs
