[package]
name = "Depth-Dealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "json"]}
chrono = {version = "0.4.31", features = ["serde"]}
futures = "0.3.29"
pin-project = "1.1.3"
reqwest = "0.11.22"
rust_decimal = "1.33.1"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
serde_qs = "0.12.0"
thiserror = "1.0.50"
tokio-tungstenite = {version = "0.20.1", features = ["native-tls"]}
tracing = "0.1.40"
url = "2.5.0"
tokio = { version = "1.34.0", features = ["net", "sync", "macros", "rt-multi-thread"] }
