[package]
name = "executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
integration = { path = "../integration" }
pin-project = "1.1.4"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
tokio = "1.35.1"
tokio-tungstenite = "0.21.0"
