[package]
name = "integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="main"
path="examples/main.rs"

[dependencies]
chrono = {version = "0.4.33", features = ["serde"]}
futures = "0.3.30"
pin-project = "1.1.4"
reqwest = "0.11.23"
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
serde_qs = "0.12.0"
thiserror = "1.0.56"
tokio = {version = "1.35.1", features = ["full"]}
tokio-tungstenite = "0.21.0"
tracing = "0.1.40"
url = "2.5.0"
